<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rvr_server</name>
  <version>0.0.0</version>
  <description>Server to execute commands on RVR</description>
  <maintainer email="esimkowitz@wustl.edu">Evan Simkowitz</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>